# -

./: README.md
chapt6/chapt6_ws/src/fishbot_description/: CMakeLists.txt
chapt6/chapt6_ws/src/fishbot_description/config/: slam_toolbox_params.yaml
chapt6/chapt6_ws/src/fishbot_description/launch/: gazebo_sim.launch.py
chapt6/chapt6_ws/src/fishbot_description/my_world/: secondroom.world
chapt6/chapt6_ws/src/fishbot_description/my_world/my_room/: model.sdf
chapt6/chapt6_ws/src/fishbot_navigation2/: CMakeLists.txt  package.xml
chapt6/chapt6_ws/src/fishbot_navigation2/config/: nav2_params.yaml
chapt6/chapt6_ws/src/fishbot_navigation2/launch/: follow_red_launch.py
chapt6/chapt6_ws/src/fishbot_navigation2/maps/: my_room.pgm  my_room.yaml
chapt6/chapt6_ws/src/fishbot_navigation2/scripts/: red_object_follower.py  red_target_teleop.py
