<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fishbot_navigation2</name>
  <version>0.0.0</version>
  <description>FishBot navigation2 package with SLAM and red object following (C++ version)</description>
  <maintainer email="shialng@todo.todo">shialng</maintainer>
  <license>Apache-2.0</license>  <!-- ROS2推荐开源协议 -->
  <author>shialng</author>      <!-- 补充作者信息 -->
  <url type="repository">https://github.com/yourname/fishbot_navigation2</url>  <!-- 可选，规范用 -->

  <!-- 编译工具依赖（C++必须） -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++核心编译依赖（仅编译时需要） -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>nav2_bringup</build_depend>

  <!-- 运行时依赖（程序运行时需要） -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- 测试依赖（可选，保留规范） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
